<resources>
    <string name="app_name">Dog Hero Project</string>
    <string name="title_activity_heroes">Meus heróis</string>
    <string name="btn_reservar">Reservar de novo</string>
    <string name="btn_conversar">Conversar</string>
    <string name="lbl_heroes">Heróis com quem hospedei</string>
    <string name="lbl_favheroes">Heróis favoritos</string>
    <string name="lbl_buscar">Busca</string>
    <string name="lbl_mensagens">Mensagens</string>
    <string name="lbl_herois">Heróis</string>
    <string name="lbl_reservas">Reservas</string>
    <string name="lbl_perfil">Perfil</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="lbl_bottom_busca">Busca</string>
    <string name="lbl_bottom_mensagens">Mensagens</string>
    <string name="lbl_bottom_herois">Heróis</string>
    <string name="lbl_bottom_reservas">Reservas</string>
    <string name="lbl_bottom_perfil">Perfil</string>
</resources>
