<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_footer_width"
            android:layout_height="@dimen/img_footer_heigth"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_busca"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/lbl_footer_size"
            android:text="@string/lbl_bottom_busca"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_footer_width"
            android:layout_height="@dimen/img_footer_heigth"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_mensagem"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/lbl_footer_size"
            android:text="@string/lbl_bottom_mensagens"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_footer_width"
            android:layout_height="@dimen/img_footer_heigth"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_herois"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/lbl_footer_size"
            android:text="@string/lbl_bottom_herois"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_footer_width"
            android:layout_height="@dimen/img_footer_heigth"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_reservas"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/lbl_footer_size"
            android:text="@string/lbl_bottom_reservas"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_footer_width"
            android:layout_height="@dimen/img_footer_heigth"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_perfil"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/lbl_footer_size"
            android:text="@string/lbl_bottom_perfil"/>

    </LinearLayout>

</LinearLayout>